erDiagram
    studios ||--o{ members : "studio_id"
    studios ||--o{ classes : "studio_id"
    studios ||--o{ campaigns : "studio_id"
    studios ||--o{ leads : "studio_id"
    profiles ||--o{ members : "profile_id"
    profiles ||--o{ employees : "user_id"
    profiles ||--o{ trainer_profiles : "user_id"
    members ||--o{ bookings : "member_id"
    members ||--o{ waitlist_entries : "member_id"
    members ||--o{ credit_packs : "member_id"
    members ||--o{ wallet_transactions : "member_id"
    members ||--o{ member_strikes : "member_id"
    members ||--o{ orders : "member_id"
    classes ||--o{ bookings : "class_id"
    classes ||--o{ waitlist_entries : "class_id"
    trainer_profiles ||--o{ classes : "trainer_id"
    trainer_profiles ||--o{ trainer_payouts : "trainer_id"
    company_accounts ||--o{ company_members : "company_id"
    company_accounts ||--o{ events : "company_id"
    company_accounts ||--o{ corporate_invoices : "company_id"
    campaigns ||--o{ campaign_recipients : "campaign_id"
    automation_flows ||--o{ automation_enrollments : "automation_id"
    leads ||--o{ lead_activities : "lead_id"
    content_posts ||--o{ content_comments : "post_id"
    employees ||--o{ clock_entries : "employee_id"
    employees ||--o{ timesheet_periods : "employee_id"
    payroll_periods ||--o{ payroll_line_items : "payroll_period_id"
    products ||--o{ order_items : "product_id"
    orders ||--o{ order_items : "order_id"
